--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
-urllib3>=1.23
-certifi>=2017.4.17
-python-dateutil>=2.1
-six>=1.10
+certifi==2021.10.8
+charset-normalizer==2.0.12
+click==8.0.4
+Flask==2.0.3
+idna==3.3
+itsdangerous==2.1.1
+Jinja2==3.0.3
+MarkupSafe==2.1.1
+requests==2.27.1
+urllib3==1.26.9
+Werkzeug==2.0.3
